# patpat.rs

./: Cargo.toml  LICENSE  README.md  errors.txt
examples/: closures.patpat  fibonacci.patpat  fizzbuzz.patpat  function_scope.patpat  lambdas.patpat  partial_applications.patpat
src/: ast.rs  error.rs  lib.rs  location.rs  main.rs  test.rs
src/ast/: define.rs  expr.rs  function.rs  mod.rs  node.rs  pattern.rs  symbol.rs
src/ast/internal/: mod.rs  pattern.rs
src/ast/resolve/: expr.rs  function.rs  lookup.rs  mod.rs  node.rs  pattern.rs  struct.rs  symbol.rs  variable.rs
src/internal/: mod.rs  pattern.rs
src/interpreter/: callable.rs  composite_fn.rs  context.rs  expr.rs  interpretation.rs  mod.rs  value.rs
src/interpreter/resolve/: mod.rs
src/parser/: mod.rs  token.rs
src/parser/construct/: block.rs  expr.rs  functions.rs  ident.rs  mod.rs  struct.rs  tuple.rs  (+1 more)
test/: declaration.pat  declaration.patpat  expressions.patpat  fibonacci.patpat  tuples.patpat  variables.patpat
test/basic/: blocks.patpat  hello_world.patpat  variables.patpat
test/expr/: add.patpat  composite_fn.patpat  div.patpat  mul.patpat  shortcircuiting.patpat  sub.patpat
test/interpretation/: basic.patpat  subtypes.patpat
test/patterns/: bail.patpat  call.patpat  closure.patpat  elseif.patpat  error_ref.patpat  for.patpat  for_returnvalue.patpat  if.patpat  lhs.patpat  loop.patpat  nargs_panic.patpat  scope.patpat  test_log.patpat  wrangle_risk.patpat
test/tuples/: access.patpat  pop.patpat  push.patpat
tests/: basic.rs  expr.rs  interpretation.rs  patterns.rs  tuples.rs
(+2 files in other folders)
