[package]
name = "patpat"
version = "0.2.0"
authors = ["Adrien Burgun <adrien.burgun@orange.fr>"]
edition = "2018"
description = "An interpreted, procedural, imperative and experimental language"
repository = "https://github.com/CreativeWolfies/patpat.rs/"
license = "MIT"
keywords = ["patpat", "language", "interpreted"]

[dependencies]
regex = "1"
colored = "1.9.3"
rusty_ulid = "0.9.3"
